Fixed problem with z-index

--- a/app/_scss/slider.scss
+++ b/app/_scss/slider.scss
@@ -3,6 +3,7 @@
 
 .Slider {
   position: relative;
+  z-index: 1;
 }
 .Slider-logo {
   position: absolute;
